--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vite-plugin-pages": "^0.32.4"
   }
 }
