--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@tauri-apps/plugin-http": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "brain.js": "^2.0.0-beta.24",
+    "cropperjs": "^1.6.2",
+    "driver.js": "^1.3.5",
     "jsencrypt": "^3.3.2",
+    "qrcode": "^1.5.4",
     "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
