--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cropperjs": "^1.6.2",
     "driver.js": "^1.3.5",
     "jsencrypt": "^3.3.2",
+    "plyr": "^3.7.8",
     "qrcode": "^1.5.4",
     "qs": "^6.14.0",
     "vue": "^3.5.13",
