--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@monaco-editor/loader": "^1.4.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
@@ -17,6 +18,7 @@
     "cropperjs": "^1.6.2",
     "driver.js": "^1.3.5",
     "jsencrypt": "^3.3.2",
+    "monaco-editor": "^0.52.2",
     "plyr": "^3.7.8",
     "qrcode": "^1.5.4",
     "qs": "^6.14.0",
