--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.3",
     "@monaco-editor/loader": "^1.4.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "aieditor": "^1.3.4",
     "brain.js": "^2.0.0-beta.24",
     "cropperjs": "^1.6.2",
     "driver.js": "^1.3.5",
@@ -22,6 +28,7 @@
     "plyr": "^3.7.8",
     "qrcode": "^1.5.4",
     "qs": "^6.14.0",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
