--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@amap/amap-jsapi-loader": "^1.0.1",
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
     "@editorjs/list": "^2.0.3",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@monaco-editor/loader": "^1.4.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-http": "^2.2.0",
