--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tauri-app",
+  "name": "con-app",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -16,9 +16,12 @@
     "@editorjs/list": "^2.0.3",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@monaco-editor/loader": "^1.4.0",
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.2.0",
+    "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-http": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-os": "^2.2.0",
+    "@tauri-apps/plugin-store": "^2.2.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "aieditor": "^1.3.4",
@@ -35,7 +38,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.2.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
     "less": "^4.2.2",
