--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "brain.js": "^2.0.0-beta.24",
     "cropperjs": "^1.6.2",
     "driver.js": "^1.3.5",
+    "element-plus": "^2.9.4",
     "jsencrypt": "^3.3.2",
     "monaco-editor": "^0.52.2",
     "plyr": "^3.7.8",
