--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@editorjs/list": "^2.0.3",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@monaco-editor/loader": "^1.4.0",
+    "@tailwindcss/vite": "^4.0.6",
     "@tauri-apps/api": "^2.2.0",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-http": "^2.2.0",
@@ -41,6 +42,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.6",
     "@tauri-apps/cli": "^2.2.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
@@ -48,7 +50,7 @@
     "less-loader": "^12.2.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.6",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.3",
