--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "jsencrypt": "^3.3.2",
     "md5": "^2.3.0",
     "monaco-editor": "^0.52.2",
+    "ogl": "^1.0.11",
     "plyr": "^3.7.8",
+    "postprocessing": "^6.36.7",
     "qrcode": "^1.5.4",
     "qs": "^6.14.0",
     "quill": "^2.0.3",
+    "three": "^0.173.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
