--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "aieditor": "^1.3.4",
+    "axios": "^1.7.9",
     "brain.js": "^2.0.0-beta.24",
     "cropperjs": "^1.6.2",
     "driver.js": "^1.3.5",
