--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "md5": "^2.3.0",
     "monaco-editor": "^0.52.2",
     "ogl": "^1.0.11",
+    "pinia": "^3.0.1",
     "plyr": "^3.7.8",
     "postprocessing": "^6.36.7",
     "qrcode": "^1.5.4",
