--- a/package.json
+++ b/package.json
@@ -46,18 +46,19 @@
     "three": "^0.173.0",
     "vue": "^3.5.13",
     "vue-i18n": "^10.0.5",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.6",
     "@tauri-apps/cli": "^2.2.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
+    "tailwindcss": "^3.4.17",
     "less": "^4.2.2",
     "less-loader": "^12.2.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "tailwindcss": "^4.0.6",
     "unplugin-auto-import": "^19.0.0",
     "unplugin-vue-components": "^28.0.0",
     "vite": "^6.0.3",
