--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@editorjs/editorjs": "^2.30.8",
     "@editorjs/header": "^2.8.8",
     "@editorjs/list": "^2.0.3",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@monaco-editor/loader": "^1.4.0",
     "@tailwindcss/forms": "^0.5.10",
